// Business database schema for the app domain.
// This document intentionally omits infrastructure-only tables such as ASP.NET Identity, refresh tokens, idempotency records, data protection keys, and other persistence plumbing.
// PostgreSQL schema: app

Table app_settings [note: 'Настройки приложения'] {
  Id long [pk]
  ReviewOrderNominalPrice long [note: 'Номинальная стоимость заказа']
  IncludedTrackDurationSeconds int [note: 'Длительность трека, включенная в номинальную стоимость заказа, в секундах']
  ReviewOrderExtraTrackSecondPrice long [note: 'Стоимость одной дополнительной секунды трека для заказа разбора']
  ReviewOrderDetailedPrice long [note: 'Стоимость услуги подробного разбора заказа']
}

Table composer_streams [note: 'Стрим композитора'] {
  Id long [pk]
  EventDate DateOnly [unique, note: 'Дата проведения стрима']
  Type ComposerStreamType [note: 'Тип стрима']
  Status ComposerStreamStatus [note: 'Статус стрима']
  StartedAt DateTime [null, note: 'Дата и время начала стрима']
  CompletedAt DateTime [null, note: 'Дата и время завершения стрима']
  CreatedByUserId Guid [ref: > AspNetUsers.Id, note: 'Пользователь, создавший стрим']
}

Table reviews [note: 'Результат разбора трека композитором'] {
  Id long [pk]
  RatingValue int [note: 'Оценка']
  CreatedAt DateTime [note: 'Дата и время создания разбора']
  UpdatedAt DateTime [note: 'Дата и время последнего обновления']
  TimestampUrl string [null, note: 'Ссылка на видео разбора']
  ReviewOrderId long [null, unique, ref: -? review_orders.Id, note: 'Связанный заказ']
  TrackId long [null, ref: >? tracks.Id, note: 'Связанный музыкальный трек']
  CreatedByUserId Guid [ref: > AspNetUsers.Id, note: 'Пользователь, создавший разбор']
}

Table tracks [note: 'Музыкальный трек'] {
  Id long [pk]
  AddedAt DateTime [note: 'Дата и время добавления трека']
  Title string [note: 'Название трека']
  DurationSeconds int [note: 'Длительность трека']
  Url string [note: 'Ссылка на трек']
  ReleaseDate DateOnly [null, note: 'Дата выпуска трека']
  CoverUrl string [null, note: 'Ссылка на обложку']
  ExtendedGenres List(string) [note: 'Расширенные жанры']
  Tags List(TrackTag) [null, note: 'Тэги JSON массив TrackTag: { Name: string, Meta?: string }']
  AddedByUserNicknameId Guid [ref: > user_nicknames.Id, note: 'Пользователь, загрузивший трек']
  CountryId long [null, ref: >? track_countries.Id, note: 'Страна производства']
  CreatedByUserId Guid [ref: > AspNetUsers.Id, note: 'Пользователь, создавший трек']
}

Table track_artists [note: 'Исполнитель музыкального трека'] {
  Id long [pk]
  Name string [note: 'Имя исполнителя']
  NormalizedName string [unique, note: 'Нормализованное имя исполнителя']
}

Table track_countries [note: 'Страна производства музыкального трека'] {
  Id long [pk]
  Name string [note: 'Название страны']
}

Table track_genres [note: 'Музыкальный жанр трека'] {
  Id long [pk]
  Name string [note: 'Название жанра']
}

Table transactions [note: 'Операция по счету'] {
  Id long [pk, note: 'Идентификатор']
  CreatedAt DateTime [note: 'Дата и время создания']
  Kind TransactionKind [note: 'Тип транзакции']
  Credit long [note: 'Зачисление']
  Debit long [note: 'Списание']
  UserNicknameAccountId Guid [ref: > user_nickname_accounts.Id, note: 'Счет псевдонима пользователя']
  TransactionSourceId long [ref: > transaction_sources.Id, note: 'Источник транзакции']
}

Table AspNetUsers [note: 'Пользователь системы'] {
  Id Guid [pk]
  UserName varchar(256) [null, note: 'Имя пользователя']
  NormalizedUserName varchar(256) [null, unique]
  CreatedAt DateTime [note: 'Дата и время регистрации']
  TwitchUserId varchar(50) [null, unique, note: 'Идентификатор пользователя в Twitch']
  TwitchLogin varchar(100) [null, note: 'Логин пользователя в Twitch']
}

Table user_nicknames [note: 'Псевдоним пользователя'] {
  Id Guid [pk]
  Nickname string [note: 'Псевдоним']
  NormalizedNickname string [unique, note: 'Нормализованный псевдоним']
  UserId Guid [null, ref: >? AspNetUsers.Id, note: 'Пользователь системы']
}

Table user_nickname_accounts [note: 'Счет псевдонима пользователя'] {
  Id Guid [pk]
  xmin uint [note: 'Версия записи PostgreSQL rowversion']
  Balance long [note: 'Текущий баланс']
  UserNicknameId Guid [unique, ref: - user_nicknames.Id, note: 'Идентификатор псевдонима пользователя']
}

Table user_entitlements [note: 'Пользовательское право на бесплатное получение заказа или услуги: жетон'] {
  Id long [pk]
  CreatedAt DateTime [note: 'Дата и время выдачи']
  RedeemedAt DateTime [null, note: 'Дата и время погашения']
  CanceledAt DateTime [null, note: 'Дата и время отмены']
  Target UserEntitlementTarget [note: 'Заказ или услуга, которую право позволяет получить бесплатно']
  UserNicknameId Guid [ref: > user_nicknames.Id, note: 'Псевдоним пользователя, которому выдано право']
  CreatedByUserId Guid [ref: > AspNetUsers.Id, note: 'Пользователь, выдавший право']
}

Table user_entitlement_redemptions [note: 'Погашение пользовательского права на заказ или услугу'] {
  Id long [pk]
  CreatedAt DateTime [note: 'Дата и время погашения']
  Target UserEntitlementTarget [note: 'Заказ или услуга, полученная бесплатно при погашении']
  UserEntitlementId long [unique, ref: - user_entitlements.Id, note: 'Погашенное пользовательское право']
  RedeemedByUserId Guid [ref: > AspNetUsers.Id, note: 'Пользователь, выполнивший погашение']
  ReviewOrderId long [null, unique, ref: -? review_orders.Id, note: 'Заказ разбора, полученный по жетону']
  ReviewOrderDetailedReviewPaymentId long [null, unique, ref: -? review_order_detailed_review_payments.Id, note: 'Услуга подробного разбора, полученная по жетону']
}

Table user_track_ratings [note: 'Пользовательская оценка трека'] {
  Id long [pk]
  RatingValue int [note: 'Оценка']
  Comment string [null, note: 'Комментарий']
  CreatedAt DateTime [note: 'Дата и время создания оценки']
  UpdatedAt DateTime [note: 'Дата и время обновления оценки']
  TrackId long [ref: > tracks.Id, note: 'Идентификатор трека']
  CreatedByUserId Guid [ref: > AspNetUsers.Id, note: 'Идентификатор пользователя, создавшего оценку']

  indexes {
    (TrackId, CreatedByUserId) [unique]
  }
}

// TransactionSources

Table transaction_sources [note: 'Базовый источник транзакции (TPT стратегия)'] {
  Id long [pk]
  CreatedAt DateTime [note: 'Дата и время создания']
  CreatedByUserId Guid [ref: > AspNetUsers.Id, note: 'Идентификатор пользователя, создавшего источник транзакции']
}

Table account_top_ups [note: 'Пополнение счета пользователя'] {
  Id long [pk, ref: - transaction_sources.Id]
  Provider AccountTopUpProvider [note: 'Провайдер/канал пополнения счета пользователя']
  UserNicknameAccountId Guid [ref: > user_nickname_accounts.Id, note: 'Идентификатор счета псевдонима пользователя']
}

Table review_orders [note: 'Заказ разбора трека'] {
  Id long [pk, ref: - transaction_sources.Id]
  MainNickname string [note: 'Основной ник пользователя, из всех пользователей, кто причастен к созданию заказа']
  MainNormalizedNickname string [note: 'Нормализованный основной ник пользователя']
  CreationStreamId long [ref: > composer_streams.Id, note: 'Связанный стрим, где создан заказ']
  ProcessingStreamId long [null, ref: >? composer_streams.Id, note: 'Связанный стрим, где заказ взят в работу']
  InProgressAt DateTime [null, note: 'Дата и время взятия заказа в работу']
  CompletedAt DateTime [null, note: 'Дата и время выполнения заказа']
  CanceledAt DateTime [null, note: 'Дата и время отмены заказа']
  CancelReason string [null, note: 'Причина отмены заказа']
  Type ReviewOrderType [note: 'Тип заказа']
  Status ReviewOrderStatus [note: 'Статус заказа']
  QueueCategory QueueCategory [note: 'Категория заказа в очереди (записывается при взятии заказа в работу)']
  IsFrozen bool [note: 'Заказ заморожен']
  TrackUrl string [null, note: 'Ссылка на трек']
  TrackDurationSeconds int [null, note: 'Длительность трека в секундах']
  TrackId long [null, ref: >? tracks.Id, note: 'Ссылка на трек (ID)']
  Price long [note: 'Стоимость заказа']
  PayableAmount long [note: 'Snapshot обязательной стоимости заказа: номинал плюс доплата за длительность']
  PricingComment string [null, note: 'Комментарий к цене']
  UserComment string [null, note: 'Комментарий пользователя']
}

Table review_order_detailed_review_payments [note: 'Оплата подробного разбора заказа'] {
  Id long [pk, ref: - transaction_sources.Id]
  ReviewOrderId long [unique, ref: - review_orders.Id, note: 'Заказ разбора, для которого оплачена услуга подробного разбора']
  Price long [note: 'Стоимость подробного разбора']
}

Table transaction_reversals [note: 'Отмена транзакции'] {
  Id long [pk, ref: - transaction_sources.Id]
  Reason varchar(100) [note: 'Причина отмены']
  ReversedTransactionId long [unique, ref: - transactions.Id, note: 'Транзакция, которую отменили']
  ReversalTransactionId long [unique, ref: - transactions.Id, note: 'Транзакция отмены']
}

Ref ReviewOrderEntityUserNicknameEntity: review_orders.Id <> user_nicknames.Id // Связь заказов и псевдонимов
Ref TrackArtistEntityTrackEntity: track_artists.Id <> tracks.Id // Связь исполнителей и треков
Ref TrackEntityTrackGenreEntity: tracks.Id <> track_genres.Id // Связь треков и жанров
Ref TrackArtistEntityUserEntity: track_artists.Id <> AspNetUsers.Id // Связь исполнителей и пользователей

// Enums

// Тип транзакции
Enum TransactionKind {
  Unspecified [note: 'Не задан']
  AccountTopUp [note: 'Пополнение счета']
  Payment [note: 'Оплата заказа/услуги']
  Reversal [note: 'Отмена транзакции']
}

// Тип заказа разбора трека
Enum ReviewOrderType {
  Unspecified [note: 'Не задан']
  OutOfQueue [note: 'Вне очереди']
  Donation [note: 'Донат']
  Free [note: 'Бесплатный']
  Charity [note: 'Благотворительный']
  Custom [note: 'Заказной']
}

// Статус заказа разбора трека
Enum ReviewOrderStatus {
  Unspecified [note: 'Не задан']
  Preorder [note: 'Предзаказ']
  AwaitingPayment [note: 'Ожидает оплаты']
  Pending [note: 'Ожидает взятия в работу']
  InProgress [note: 'В работе']
  Completed [note: 'Выполнен']
  Canceled [note: 'Отменен']
}

// Категория заказа в очереди
Enum QueueCategory {
  Unspecified [note: 'Не задан']
  OutOfQueue [note: 'Вне очереди']
  Donation [note: 'Донат']
  Debt [note: 'Долг']
}

// Тип стрима
Enum ComposerStreamType {
  Unspecified [note: 'Не задан']
  Donation [note: 'Донатный']
  Debt [note: 'Долговой']
  Charity [note: 'Благотворительный']
}

// Статус стрима
Enum ComposerStreamStatus {
  Unspecified [note: 'Не задан']
  Planned [note: 'Запланирован']
  Live [note: 'Запущен']
  Completed [note: 'Завершен']
  Canceled [note: 'Отменен']
}

// Провайдер/канал пополнения счета пользователя
Enum AccountTopUpProvider {
  Unspecified [note: 'Не задан']
  Donationalerts [note: 'DonationAlerts']
  Donatty [note: 'Donatty']
  TwitchChannelPoints [note: 'Баллы канала Twitch']
  Manual [note: 'Ручное пополнение']
}

// Услуга или стоимость, которую может покрывать пользовательское право
Enum UserEntitlementTarget {
  Unspecified [note: 'Не задано']
  OutOfQueueReviewOrder [note: 'Заказ разбора трека вне очереди']
  FreeReviewOrder [note: 'Бесплатный заказ разбора трека']
  DetailedReview [note: 'Услуга подробного разбора трека']
}